[package]
name = "rss_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.33"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.51.1"
features = [
    "Foundation_Collections",
    "Web_Syndication",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
